; ModuleID = '/home/carl/AnghaBench/git/extr_imap-send.c_socket_shutdown.c'
source_filename = "/home/carl/AnghaBench/git/extr_imap-send.c_socket_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imap_socket = type { i32*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.imap_socket*)* @socket_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_shutdown(%struct.imap_socket* %0) #0 {
  %2 = alloca %struct.imap_socket*, align 8
  store %struct.imap_socket* %0, %struct.imap_socket** %2, align 8
  %3 = load %struct.imap_socket*, %struct.imap_socket** %2, align 8
  %4 = getelementptr inbounds %struct.imap_socket, %struct.imap_socket* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.imap_socket*, %struct.imap_socket** %2, align 8
  %9 = getelementptr inbounds %struct.imap_socket, %struct.imap_socket* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @SSL_shutdown(i64 %10)
  %12 = load %struct.imap_socket*, %struct.imap_socket** %2, align 8
  %13 = getelementptr inbounds %struct.imap_socket, %struct.imap_socket* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @SSL_free(i64 %14)
  br label %16

16:                                               ; preds = %7, %1
  %17 = load %struct.imap_socket*, %struct.imap_socket** %2, align 8
  %18 = getelementptr inbounds %struct.imap_socket, %struct.imap_socket* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @close(i32 %21)
  %23 = load %struct.imap_socket*, %struct.imap_socket** %2, align 8
  %24 = getelementptr inbounds %struct.imap_socket, %struct.imap_socket* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @close(i32 %27)
  ret void
}

declare dso_local i32 @SSL_shutdown(i64) #1

declare dso_local i32 @SSL_free(i64) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
